Added Search bar to map

--- a/web/index.html
+++ b/web/index.html
@@ -60,7 +60,7 @@
   </script>
   <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-auth.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBq0AxiXFJ82ztO4SN0rcFKjGd1P3a4nM0"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBq0AxiXFJ82ztO4SN0rcFKjGd1P3a4nM0&libraries=places"></script>
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
